src/test/deca/extension/context/invalid/wrong_dimension.deca
// Wrong dimnesion for the array

{
    int[] a = {{1,5},{1,8}};
}